# MPPL

./: Cargo.toml  Readme.md  index.html
src/: lib.rs
src/game/: food.rs  game.rs  mod.rs  snake.rs
